@@ -21,6 +21,10 @@
 
 #include "file.h"
 
+#ifdef HAVE_CONFIG_H
+# include <config.h>
+#endif
+
 #include <fcntl.h>
 #include <sys/stat.h>
 #include <sys/mman.h>
